--- a/Lecture/index.html
+++ b/Lecture/index.html
@@ -18,7 +18,7 @@
       {{sayMessage()}}
       <div>
         <button ng-click="feedYaakov()">Feed Yaakov</button>
-        Cost: {{ cookieCost | currency : "#blah" : 4 }}
+        Cost: {{ cookieCost | currency}}
         <br />
 
         <img ng-src="images/yaakov_{{stateOfBeing}}.png" />
