--- a/Lecture/Lecture12/index.html
+++ b/Lecture/Lecture12/index.html
@@ -9,7 +9,7 @@
         font-size: 1.2em;
       }
     </style>
-    <title>Creating custom filters</title>
+    <title>Filters</title>
   </head>
   <body>
     <h1>Filters</h1>
