--- a/Lecture/Lecture13(Custom Filters)/index.html
+++ b/Lecture/Lecture13(Custom Filters)/index.html
@@ -17,7 +17,9 @@
       {{name}} has a message for you:
       <br />
       <br />
-      {{sayMessage()}}
+      Original :{{sayMessage()}}
+      <br />
+      New message:{{sayLoveMessage()}}
       <br />
       <br />
       <div>
