using custom filter without passing it in inject and controller

--- a/Lecture/Lecture13(Custom Filters)/index.html
+++ b/Lecture/Lecture13(Custom Filters)/index.html
@@ -19,7 +19,10 @@
       <br />
       Original :{{sayMessage()}}
       <br />
-      New message:{{sayLoveMessage()}}
+      Loves:{{sayLoveMessage()}}
+      <br />
+      <!-- we can also use our custom filter without passing it in inject and controller -->
+      Truth:{{sayLoveMessage() | truth:'healthy':'cookies'}}
       <br />
       <br />
       <div>
