we can also add another filter on top of our custom filter

--- a/Lecture/Lecture13(Custom Filters)/index.html
+++ b/Lecture/Lecture13(Custom Filters)/index.html
@@ -24,6 +24,8 @@
       <!-- we can also use our custom filter without passing it in inject and controller -->
       Truth:{{sayLoveMessage() | truth:'healthy':'cookies'}}
       <br />
+      Big Truth:{{sayLoveMessage() | truth:'healthy':'cookies'|uppercase}}
+      <br />
       <br />
       <div>
         <button ng-click="feedYaakov()">Feed Yaakov</button>
