creating a button  Once Counter

--- a/Lecture/Lecture 14(Digest cycle)/index.html
+++ b/Lecture/Lecture 14(Digest cycle)/index.html
@@ -15,6 +15,9 @@
     <h1>The Digest Cycle</h1>
     <div ng-controller="CounterController">
       <button ng-click="showNumberOfWatchers()">Log # of Watchers</button>
+      <div>
+        <button ng-click="countOnce()">Up Once Counter</button>
+      </div>
     </div>
   </body>
 </html>
