calling our function on click

--- a/Lecture/Lecture 14(Digest cycle)/index.html
+++ b/Lecture/Lecture 14(Digest cycle)/index.html
@@ -16,7 +16,8 @@
     <div ng-controller="CounterController">
       <button ng-click="showNumberOfWatchers()">Log # of Watchers</button>
       <div>
-        <button ng-click="countOnce()">Up Once Counter</button>
+        <button ng-click="countOnce()">Up Once Counter(once)</button>
+        <button ng-click="upCounter()">increase Counter</button>
       </div>
     </div>
   </body>
