adding the display of counter here we didnt have to use watch coz angular handles that for us.

--- a/Lecture/Lecture 14(Digest cycle)/index.html
+++ b/Lecture/Lecture 14(Digest cycle)/index.html
@@ -19,6 +19,9 @@
         <button ng-click="countOnce()">Up Once Counter(once)</button>
         <button ng-click="upCounter()">increase Counter</button>
       </div>
+      <div>
+        <p>Once counter: {{onceCounter}}</p>
+      </div>
     </div>
   </body>
 </html>
