displaying the counter

--- a/Lecture/Lecture 14(Digest cycle)/index.html
+++ b/Lecture/Lecture 14(Digest cycle)/index.html
@@ -21,6 +21,8 @@
       </div>
       <div>
         <p>Once counter: {{onceCounter}}</p>
+        <br />
+        <p>Regular counter: {{counter}}</p>
       </div>
     </div>
   </body>
