--- a/Lecture/Lecture 14(Digest cycle)/index.html
+++ b/Lecture/Lecture 14(Digest cycle)/index.html
@@ -15,6 +15,7 @@
     <h1>The Digest Cycle</h1>
     <div ng-controller="CounterController">
       <button ng-click="showNumberOfWatchers()">Log # of Watchers</button>
+      <input type="text" ng-model="name" />
       <div>
         <button ng-click="countOnce()">Up Once Counter(once)</button>
         <button ng-click="upCounter()">increase Counter</button>
