--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -26,7 +26,7 @@
       </ul> -->
 
       <!-- Shopping List #3: -->
-      <input type="text" ng-model="shoppingList2[0].quantity" />
+      <!-- <input type="text" ng-model="shoppingList2[0].quantity" />
       <ul>
         <li ng-repeat="item in shoppingList2">
           {{$index + 1}}. Buy {{item.quantity}} of {{item.name}}(s)
@@ -38,7 +38,7 @@
         ng-model="newItemQuantity"
         placeholder="item quantity"
       />
-      <button ng-click="addToList()">Add To List</button>
+      <button ng-click="addToList()">Add To List</button> -->
     </div>
   </body>
 </html>
