--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -17,6 +17,7 @@
       <!-- Shopping List #1: -->
       <h3>Shopping List:</h3>
       <ul>
+        <!-- mapping data in an array in Angular -->
         <li ng-repeat="item in shoppingList1">{{ item }}</li>
       </ul>
 
