mapping data in an array that has an object in Angular

--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -22,9 +22,12 @@
       </ul>
 
       <!-- Shopping List #2: -->
-      <!-- <ul>
-        <li ng-repeat="item in shoppingList2">Buy {{item.quantity}} of {{item.name}}(s)</li>
-      </ul> -->
+      <!-- mapping data in an array that has an object in Angular -->
+      <ul>
+        <li ng-repeat="item in shoppingList2">
+          Buy {{item.quantity}} of {{item.name}}(s)
+        </li>
+      </ul>
 
       <!-- Shopping List #3: -->
       <!-- <input type="text" ng-model="shoppingList2[0].quantity" />
