--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -28,22 +28,14 @@
           Buy {{item.quantity}} of {{item.name}}(s)
         </li>
       </ul>
-      <!-- adding their index on each list -->
+
+      <!-- Shopping List #3: -->
+      <input type="text" />
       <ul>
         <li ng-repeat="item in shoppingList2">
           {{$index + 1}}. Buy {{item.quantity}} of {{item.name}}(s)
         </li>
       </ul>
-      <!-- Shopping List #3: -->
-      <!-- <input type="text" ng-model="shoppingList2[0].quantity" />
-     
-      <input type="text" ng-model="newItemName" placeholder="item name" />
-      <input
-        type="text"
-        ng-model="newItemQuantity"
-        placeholder="item quantity"
-      />
-      <button ng-click="addToList()">Add To List</button> -->
     </div>
   </body>
 </html>
