--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -16,21 +16,21 @@
     <div ng-controller="ShoppingListController">
       <!-- Shopping List #1: -->
       <h3>Shopping List:</h3>
-      <ul>
-        <!-- mapping data in an array in Angular -->
+      <!-- mapping data in an array in Angular -->
+      <!-- <ul>
         <li ng-repeat="item in shoppingList1">{{ item }}</li>
-      </ul>
+      </ul> -->
 
       <!-- Shopping List #2: -->
       <!-- mapping data in an array that has an object in Angular -->
-      <ul>
+      <!-- <ul>
         <li ng-repeat="item in shoppingList2">
           Buy {{item.quantity}} of {{item.name}}(s)
         </li>
-      </ul>
+      </ul> -->
 
       <!-- Shopping List #3: -->
-      <input type="text" />
+      <input type="text" ng-model="shoppingList2[0].quantity" />
       <ul>
         <li ng-repeat="item in shoppingList2">
           {{$index + 1}}. Buy {{item.quantity}} of {{item.name}}(s)
