adding an input field for item name

--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -36,6 +36,9 @@
           {{$index + 1}}. Buy {{item.quantity}} of {{item.name}}(s)
         </li>
       </ul>
+      <div>
+        <input type="text" ng-model="newItemName" placeholder="item name" />
+      </div>
     </div>
   </body>
 </html>
