--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -38,6 +38,11 @@
       </ul>
       <div>
         <input type="text" ng-model="newItemName" placeholder="item name" />
+        <input
+          type="text"
+          ng-model="newItemQuantity"
+          placeholder="item Quantity"
+        />
       </div>
     </div>
   </body>
