adddItem is a function

--- a/Lecture/Lecture 17(ng-repeat)/index.html
+++ b/Lecture/Lecture 17(ng-repeat)/index.html
@@ -43,7 +43,7 @@
           ng-model="newItemQuantity"
           placeholder="item Quantity"
         />
-        <button type="button" ng-click="addItem">Add to List</button>
+        <button type="button" ng-click="addItem()">Add to List</button>
       </div>
     </div>
   </body>
