--- a/Lecture/Lecture 18(filter)/index.html
+++ b/Lecture/Lecture 18(filter)/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="filter.js"></script>
     <style>
       body {
         font-size: 1.2em;
