--- a/Lecture/Lecture 19(Prototype Inheritance)/index.html
+++ b/Lecture/Lecture 19(Prototype Inheritance)/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ShoppingListApp">
+<html ng-app="ControllerAsApp">
   <head>
     <meta charset="utf-8" />
     <script src="angular.min.js"></script>
@@ -9,18 +9,20 @@
         font-size: 1.2em;
       }
     </style>
-    <title>ng-repeat</title>
+    <title>Controller As Syntax</title>
   </head>
   <body>
-    <h1>ng-repeat</h1>
-    <div ng-controller="ShoppingListController">
-      <!-- Searching data in angular js: -->
-      <h3>Shopping List:</h3>
-      <input type="text" ng-model="search" />
-      <ul>
-        <!-- to search we filter the item -->
-        <li ng-repeat="item in shoppingList | filter:search">{{ item }}</li>
-      </ul>
+    <h1>Controller As Syntax</h1>
+    <div ng-controller="ParentController1">
+      <div ng-controller="ChildController1"></div>
+    </div>
+
+    <div ng-controller="ParentController2 as parent">
+      Parent value: {{ parent.value }}
+
+      <div ng-controller="ChildController2 as child">
+        Child value: {{ child.value }} Parent value: {{ parent.value }}
+      </div>
     </div>
   </body>
 </html>
