code to be used after

--- a/Lecture/Lecture 19(Prototype Inheritance)/index.html
+++ b/Lecture/Lecture 19(Prototype Inheritance)/index.html
@@ -17,12 +17,12 @@
       <div ng-controller="ChildController1"></div>
     </div>
 
-    <div ng-controller="ParentController2 as parent">
+    <!-- <div ng-controller="ParentController2 as parent">
       Parent value: {{ parent.value }}
 
       <div ng-controller="ChildController2 as child">
         Child value: {{ child.value }} Parent value: {{ parent.value }}
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
