we pass the scope coz we are going to use it to display

--- a/Lecture/Lecture 19(Prototype Inheritance)/index.html
+++ b/Lecture/Lecture 19(Prototype Inheritance)/index.html
@@ -21,7 +21,7 @@
       Parent value: {{ parent.value }}
 
       <div ng-controller="ChildController2 as child">
-        Child value: {{ child.value }} Parent value: {{ parent.value }}
+        Child value: {{ child.value }}
       </div>
     </div>
   </body>
