we can also display the parent value in the childcontroller

--- a/Lecture/Lecture 19(Prototype Inheritance)/index.html
+++ b/Lecture/Lecture 19(Prototype Inheritance)/index.html
@@ -22,6 +22,8 @@
 
       <div ng-controller="ChildController2 as child">
         Child value: {{ child.value }}
+        <!-- we can also display the parent value in the childcontroller -->
+        Parent value: {{ parent.value }}
       </div>
     </div>
   </body>
