--- a/Lecture/Lecture 20(Custom Service)/index.html
+++ b/Lecture/Lecture 20(Custom Service)/index.html
@@ -32,6 +32,7 @@
         <!-- we use ng-repeat to map data in angular -->
         <li ng-repeat="item in showList.items">
           {{ item.quantity }} of {{ item.name }}
+          <!-- creating a remove index button -->
         </li>
       </ol>
     </div>
