calling a remove index button

--- a/Lecture/Lecture 20(Custom Service)/index.html
+++ b/Lecture/Lecture 20(Custom Service)/index.html
@@ -33,6 +33,7 @@
         <li ng-repeat="item in showList.items">
           {{ item.quantity }} of {{ item.name }}
           <!-- creating a remove index button -->
+          <button ng-click="showList.removeItem($index);">Remove</button>
         </li>
       </ol>
     </div>
