his will show if there is an error

--- a/Lecture/Lecture 22(Custom Service-Provider)/index.html
+++ b/Lecture/Lecture 22(Custom Service-Provider)/index.html
@@ -22,7 +22,10 @@
           <button ng-click="list.removeItem($index);">Remove Item</button>
         </li>
       </ol>
-      <div class="error">Error: {{list.errorMessage}}</div>
+      <!-- this will show if there is an error -->
+      <div class="error" ng-if="list.errorMessage">
+        Error: {{list.errorMessage}}
+      </div>
     </div>
   </body>
 </html>
