--- a/Lecture/Lecture 22(Custom Service-Provider)/index.html
+++ b/Lecture/Lecture 22(Custom Service-Provider)/index.html
@@ -26,7 +26,10 @@
       <!-- <div class="error" ng-if="list.errorMessage">
         Error: {{list.errorMessage}}
       </div> -->
-      <div class="error" ng-show="list.errorMessage">
+      <!-- <div class="error" ng-show="list.errorMessage">
+        Error: {{list.errorMessage}}
+      </div> -->
+      <div class="error" ng-hide="!list.errorMessage">
         Error: {{list.errorMessage}}
       </div>
     </div>
