using our ng-if

--- a/Lecture/Lecture 22(Custom Service-Provider)/index.html
+++ b/Lecture/Lecture 22(Custom Service-Provider)/index.html
@@ -23,15 +23,15 @@
         </li>
       </ol>
       <!-- this will show if there is an error -->
-      <!-- <div class="error" ng-if="list.errorMessage">
+      <div class="error" ng-if="list.errorMessage">
         Error: {{list.errorMessage}}
-      </div> -->
+      </div>
       <!-- <div class="error" ng-show="list.errorMessage">
         Error: {{list.errorMessage}}
       </div> -->
-      <div class="error" ng-hide="!list.errorMessage">
+      <!-- <div class="error" ng-hide="!list.errorMessage">
         Error: {{list.errorMessage}}
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
