--- a/Lecture/Lecture24(Asynchronous behaviour)/index.html
+++ b/Lecture/Lecture24(Asynchronous behaviour)/index.html
@@ -5,6 +5,7 @@
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="styles.css" />
+    <!-- learning to create a shopping list using Promises -->
     <title>Shopping List with a Promise</title>
   </head>
   <body>
