inputfield to add our items

--- a/Lecture/Lecture24(Asynchronous behaviour)/index.html
+++ b/Lecture/Lecture24(Asynchronous behaviour)/index.html
@@ -13,6 +13,7 @@
 
     <div ng-controller="ShoppingListController as list">
       <h3>Shopping List</h3>
+      <!-- inputfield to add our items -->
       <input type="text" ng-model="list.itemName" placeholder="item name" />
       <input type="text" ng-model="list.itemQuantity" placeholder="quantity" />
       boxes
